feat: Update swagger.yaml and postman
