# src/main/java/com/example/todoapp/dto/TaskOutputDTO.java
@@ -1,0 +1,4 @@
+package com.example.todoapp.dto;
+
+public record TaskOutputDTO (Integer id, String title, String description, boolean done){
+}
